Disable float audio output on Vivo devices; they're broken.

Play Store users and TE verification report these devices play
garbled audio when using float. Disable for all Vivo devices since
they're still shipping 2017 models with Lollipop.

BUG=737188
TEST=none

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I289b9f917c5bb7cefacc12fc29f7ecbcd02ec417
Reviewed-on: https://chromium-review.googlesource.com/552961
Reviewed-by: Frank Liberato <liberato@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#483158}
Former-commit-id: 30ce8a5ef772032f32fcb53d39612aca2529c891